UCF-APR2.4/ftr main/force-app/main/default/objects/Account/fields/Customer_Health_Status__c.field-meta.xml
<CustomField>
    <fullName>Customer_Health_Status__c</fullName>
    <label>Customer Health Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Good Standing</fullName>
            </value>
            <value>
                <fullName>Requires Attention</fullName>
            </value>
            <value>
                <fullName>At Risk</fullName>
            </value>
            <value>
                <fullName>Lost</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>