UCF-APR2.4/ftr main/force-app/main/default/objects/Account/fields/Customer_Number__c.field-meta.xml
<CustomField>
    <fullName>Customer_Number__c</fullName>
    <description>Unique identifier for a company record from OCAM</description>
    <externalId>true</externalId>
    <label>Customer Number</label>
    <length>10</length>
    <type>Text</type>
</CustomField>