UCF-APR2.4/ftr main/force-app/main/default/objects/Account/fields/Customer_Number_New__c.field-meta.xml
<CustomField>
    <fullName>Customer_Number_New__c</fullName>
    <externalId>true</externalId>
    <label>OCAM Customer Number</label>
    <length>10</length>
    <type>Text</type>
</CustomField>