UCF-APR2.4/ftr main/force-app/main/default/objects/Account/fields/Customer_Status__c.field-meta.xml
<CustomField>
    <fullName>Customer_Status__c</fullName>
    <description>Identifies the Customer status in relation to DPI products and services.</description>
    <inlineHelpText>The assigned value reflects the customer status in relation to Frontier products and services.</inlineHelpText>
    <label>Customer Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Active</fullName>
                <default>true</default>
                <label>Active</label>
            </value>
            <value>
                <fullName>Deactive</fullName>
            </value>
            <value>
                <fullName>Pending</fullName>
            </value>
            <value>
                <fullName>Prospect</fullName>
            </value>
            <value>
                <fullName>Winback</fullName>
            </value>
            <value>
                <fullName>New Add</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>