UCF-APR2.4/ftr main/force-app/main/default/objects/Account/fields/Customer_Type_Flag__c.field-meta.xml
<CustomField>
    <fullName>Customer_Type_Flag__c</fullName>
    <formula>If(
 OR(
  Customer_Number__c &lt;&gt; &quot;&quot;, 
  if(TEXT(Type) = &quot;Customer&quot;, True, False)
 ), 
&quot;Customer&quot;, &quot;Prospect&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Customer Type Flag</label>
    <type>Text</type>
</CustomField>