UCF-APR2.4/ftr main/force-app/main/default/objects/Account/fields/CustomerId__c.field-meta.xml
<CustomField>
    <fullName>CustomerId__c</fullName>
    <formula>Phone</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CustomerId</label>
    <type>Text</type>
</CustomField>