UCF-APR2.4/ftr main/force-app/main/default/objects/Account/fields/Custsegcode__c.field-meta.xml
<CustomField>
    <fullName>Custsegcode__c</fullName>
    <label>Custsegcode</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>99</fullName>
                <default>true</default>
                <label>99</label>
            </value>
            <value>
                <fullName>56</fullName>
            </value>
            <value>
                <fullName>54</fullName>
            </value>
            <value>
                <fullName>55</fullName>
            </value>
            <value>
                <fullName>58</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>