UCF-APR2.4/ftr main/force-app/main/default/objects/Account/fields/D_B_Business_Name__c.field-meta.xml
<CustomField>
    <fullName>D_B_Business_Name__c</fullName>
    <description>Added by Randy Gromlich 1/29/2020</description>
    <inlineHelpText>The Primary or Registered name of the business.</inlineHelpText>
    <label>D&amp;B Business Name</label>
    <length>150</length>
    <type>Text</type>
</CustomField>