UCF-APR2.4/ftr main/force-app/main/default/objects/Account/fields/D_B_Corp_Data_Networks_Bill__c.field-meta.xml
<CustomField>
    <fullName>D_B_Corp_Data_Networks_Bill__c</fullName>
    <description>Updated/Created by Randy Gromlich for D&amp;B/MLR data 3/5/2020</description>
    <inlineHelpText>Modeled estimate of the monthly spend for such things as MPLS Networks, MetroE, Private Lines, VPN, ATM/Frame Relay, VoIP, T1 Lines, and SONET.</inlineHelpText>
    <label>D&amp;B Corp Data Networks Bill</label>
    <precision>15</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>