UCF-APR2.4/ftr main/force-app/main/default/objects/Account/fields/D_B_Internet_Services_Bill__c.field-meta.xml
<CustomField>
    <fullName>D_B_Internet_Services_Bill__c</fullName>
    <description>Updated/Created by Randy Gromlich for D&amp;B/MLR data 3/5/2020</description>
    <inlineHelpText>Modeled estimate of the monthly spend associated with such things as Cable/xDSL Modem Services and Internal Data Services.</inlineHelpText>
    <label>D&amp;B Internet Services Bill</label>
    <precision>15</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>