UCF-APR2.4/ftr main/force-app/main/default/objects/Account/fields/D_B_PBX_Indicator__c.field-meta.xml
<CustomField>
    <fullName>D_B_PBX_Indicator__c</fullName>
    <defaultValue>false</defaultValue>
    <label>D&amp;B PBX Indicator</label>
    <type>Checkbox</type>
</CustomField>