UCF-APR2.4/ftr main/force-app/main/default/objects/Account/fields/D_B_T1_Index__c.field-meta.xml
<CustomField>
    <fullName>D_B_T1_Index__c</fullName>
    <defaultValue>false</defaultValue>
    <label>D&amp;B T1 Index</label>
    <type>Checkbox</type>
</CustomField>