UCF-APR2.4/ftr main/force-app/main/default/objects/Account/fields/D_U_N_S_Number__c.field-meta.xml
<CustomField>
    <fullName>D_U_N_S_Number__c</fullName>
    <description>Used by Randy Gromlich for D&amp;B/MLR Data updated on 3/5/2020</description>
    <inlineHelpText>Randomly generated nine-digit number assigned by D&amp;B to identify unique business establishments.</inlineHelpText>
    <label>DUNS Number</label>
    <length>9</length>
    <type>Text</type>
</CustomField>