UCF-APR2.4/ftr main/force-app/main/default/objects/Account/fields/Dail_Up_Customer__c.field-meta.xml
<CustomField>
    <fullName>Dail_Up_Customer__c</fullName>
    <description>Business Dila-Up Intenret Service Indicator</description>
    <inlineHelpText>Identifies customers that currently have business Dial-Up Internet service</inlineHelpText>
    <label>Dail-Up Customer</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>No</fullName>
                <default>true</default>
                <label>No</label>
            </value>
            <value>
                <fullName>Yes</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>