UCF-APR2.4/ftr main/force-app/main/default/objects/Account/fields/Data_Center__c.field-meta.xml
<CustomField>
    <fullName>Data_Center__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Data Center</label>
    <type>Checkbox</type>
</CustomField>