UCF-APR2.4/ftr main/force-app/main/default/objects/Account/fields/Data_Center_Agreement__c.field-meta.xml
<CustomField>
    <fullName>Data_Center_Agreement__c</fullName>
    <description>Created to reflect if we have a Data Center Agreement with the location.</description>
    <label>Data Center Agreement?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>