UCF-APR2.4/ftr main/force-app/main/default/objects/Account/fields/DBA_Company_Name__c.field-meta.xml
<CustomField>
    <fullName>DBA_Company_Name__c</fullName>
    <label>DBA Company Name</label>
    <length>50</length>
    <type>Text</type>
</CustomField>