UCF-APR2.4/ftr main/force-app/main/default/objects/Account/fields/DBA_Doing_Business_As__c.field-meta.xml
<CustomField>
    <fullName>DBA_Doing_Business_As__c</fullName>
    <description>Used by Randy Gromlich 3/5/2020</description>
    <inlineHelpText>Additional name used by a company.  Also referred to as &quot;Doing Business As&quot; (DBA) and &quot;Also Known As&quot; (AKA).</inlineHelpText>
    <label>DBA Name</label>
    <length>50</length>
    <type>Text</type>
</CustomField>