UCF-APR2.4/ftr main/force-app/main/default/objects/Account/fields/Decision_Maker_HQ__c.field-meta.xml
<CustomField>
    <fullName>Decision_Maker_HQ__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Updated/Created by Randy Gromlich for D&amp;B/MLR data 3/5/2020</description>
    <inlineHelpText>Indicates whether the business is a likely Decision HQ or not.</inlineHelpText>
    <label>Decision-Maker HQ</label>
    <type>Checkbox</type>
</CustomField>