UCF-APR2.4/ftr main/force-app/main/default/objects/Account/fields/Dedicated_Internet_Access_Intent__c.field-meta.xml
<CustomField>
    <fullName>Dedicated_Internet_Access_Intent__c</fullName>
    <description>Intent Topics for array: Business Continuity, Partner Enablement, Hybrid Working / Hybrid Workplace, Disaster Recovery, Team Collaboration.

For Zoominfo Intent Integration, introduced in 11/16 Release, 2023.</description>
    <inlineHelpText>Zoominfo Intent Integration</inlineHelpText>
    <label>Dedicated Internet Access - Intent</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>