UCF-APR2.4/ftr main/force-app/main/default/objects/Account/fields/Description_of_agent_work_to_be_done__c.field-meta.xml
<CustomField>
    <fullName>Description_of_agent_work_to_be_done__c</fullName>
    <description>ACM can provide description of justification for contracting with potential partner agent</description>
    <label>Description of agent work to be done</label>
    <length>300</length>
    <type>LongTextArea</type>
</CustomField>