UCF-APR2.4/ftr main/force-app/main/default/objects/Account/fields/Dias_Code__c.field-meta.xml
<CustomField>
    <fullName>Dias_Code__c</fullName>
    <description>Used by Randy Gromlich for D&amp;B/MLR Data updated on 3/5/2020</description>
    <inlineHelpText>A number which sequences a file in order by ultimate parent name and family sequence within each group</inlineHelpText>
    <label>Dias Code</label>
    <length>9</length>
    <type>Text</type>
</CustomField>