UCF-APR2.4/ftr main/force-app/main/default/objects/Account/fields/distancetodirectedclli__c.field-meta.xml
<CustomField>
    <fullName>distancetodirectedclli__c</fullName>
    <description>Updated/Created by Randy Gromlich for D&amp;B/MLR data 3/5/2020</description>
    <inlineHelpText>Distance, in miles, to serving wire center</inlineHelpText>
    <label>distancetodirectedclli</label>
    <precision>8</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>