UCF-APR2.4/ftr main/force-app/main/default/objects/Account/fields/DNB_Segment_Ocam__c.field-meta.xml
<CustomField>
    <fullName>DNB_Segment_Ocam__c</fullName>
    <description>this field was created because the data needed to be captured for the d&amp;b section on the accounts. We got the data from the MLR (Market Lead Request) File.</description>
    <label>DNB Segment Ocam</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1000+</fullName>
            </value>
            <value>
                <fullName>100-249</fullName>
            </value>
            <value>
                <fullName>250-499</fullName>
            </value>
            <value>
                <fullName>30-99</fullName>
            </value>
            <value>
                <fullName>500-999</fullName>
            </value>
            <value>
                <fullName>SMB</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>