UCF-APR2.4/ftr main/force-app/main/default/objects/Account/fields/Do_Not_Contact__c.field-meta.xml
<CustomField>
    <fullName>Do_Not_Contact__c</fullName>
    <description>Customers Do Not Contacted Flag indicates if the customer should be contacted for additional services and products.</description>
    <inlineHelpText>Customers that have actively requested that Frontier not contact them regarding promotions and products and services are set to &apos;Yes.&apos;</inlineHelpText>
    <label>Do Not Contact</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>No</fullName>
                <default>true</default>
                <label>No</label>
            </value>
            <value>
                <fullName>Yes (Do not contact)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>