UCF-APR2.4/ftr main/force-app/main/default/objects/Account/fields/Domestic_Family_Members__c.field-meta.xml
<CustomField>
    <fullName>Domestic_Family_Members__c</fullName>
    <description>Used by Randy Gromlich for D&amp;B/MLR Data updated on 3/5/2020</description>
    <inlineHelpText>Total Domestic DUNS family members.</inlineHelpText>
    <label>Domestic Family Members</label>
    <length>50</length>
    <type>Text</type>
</CustomField>