UCF-APR2.4/ftr main/force-app/main/default/objects/Account/fields/Domestic_Ultimate_DUNS__c.field-meta.xml
<CustomField>
    <fullName>Domestic_Ultimate_DUNS__c</fullName>
    <description>Used by Randy Gromlich for D&amp;B/MLR Data updated on 3/5/2020</description>
    <inlineHelpText>DUNS number the highest family member in the Domestic US organization.</inlineHelpText>
    <label>Domestic Ultimate DUNS</label>
    <length>9</length>
    <type>Text</type>
</CustomField>