UCF-APR2.4/ftr main/force-app/main/default/objects/Account/fields/DPI_AccountPW__c.field-meta.xml
<CustomField>
    <fullName>DPI_AccountPW__c</fullName>
    <label>Account PW</label>
    <length>20</length>
    <type>Text</type>
</CustomField>