UCF-APR2.4/ftr main/force-app/main/default/objects/Account/fields/DPI_Address_ID__c.field-meta.xml
<CustomField>
    <fullName>DPI_Address_ID__c</fullName>
    <externalId>true</externalId>
    <label>DPI Address ID</label>
    <length>50</length>
    <type>Text</type>
</CustomField>