UCF-APR2.4/ftr main/force-app/main/default/objects/Account/fields/DPI_Aging_61_90__c.field-meta.xml
<CustomField>
    <fullName>DPI_Aging_61_90__c</fullName>
    <label>61-90</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>