UCF-APR2.4/ftr main/force-app/main/default/objects/Account/fields/DPI_Aging_90_Plus__c.field-meta.xml
<CustomField>
    <fullName>DPI_Aging_90_Plus__c</fullName>
    <label>90+</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>