UCF-APR2.4/ftr main/force-app/main/default/objects/Account/fields/DPI_Bankruptcy_Flag__c.field-meta.xml
<CustomField>
    <fullName>DPI_Bankruptcy_Flag__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Bankruptcy Flag</label>
    <type>Checkbox</type>
</CustomField>