UCF-APR2.4/ftr main/force-app/main/default/objects/Account/fields/DPI_BillCycle__c.field-meta.xml
<CustomField>
    <fullName>DPI_BillCycle__c</fullName>
    <label>Bill Cycle</label>
    <length>5</length>
    <type>Text</type>
</CustomField>