UCF-APR2.4/ftr main/force-app/main/default/objects/Account/fields/DPI_ConnectDate__c.field-meta.xml
<CustomField>
    <fullName>DPI_ConnectDate__c</fullName>
    <label>Connect Date</label>
    <type>Date</type>
</CustomField>