UCF-APR2.4/ftr main/force-app/main/default/objects/Account/fields/DPI_Credit_Rating__c.field-meta.xml
<CustomField>
    <fullName>DPI_Credit_Rating__c</fullName>
    <label>Credit Rating</label>
    <length>50</length>
    <type>Text</type>
</CustomField>