UCF-APR2.4/ftr main/force-app/main/default/objects/Account/fields/DPI_Credit_Score__c.field-meta.xml
<CustomField>
    <fullName>DPI_Credit_Score__c</fullName>
    <label>Credit Score</label>
    <length>10</length>
    <type>Text</type>
</CustomField>