UCF-APR2.4/ftr main/force-app/main/default/objects/Account/fields/DPI_CurrentDueDate__c.field-meta.xml
<CustomField>
    <fullName>DPI_CurrentDueDate__c</fullName>
    <label>Current Due Date</label>
    <type>Date</type>
</CustomField>