UCF-APR2.4/ftr main/force-app/main/default/objects/Account/fields/DPI_CustAuthID__c.field-meta.xml
<CustomField>
    <fullName>DPI_CustAuthID__c</fullName>
    <label>Customer Authorization ID</label>
    <length>15</length>
    <type>Text</type>
</CustomField>