UCF-APR2.4/ftr main/force-app/main/default/objects/Account/fields/DPI_Customer_Name__c.field-meta.xml
<CustomField>
    <fullName>DPI_Customer_Name__c</fullName>
    <label>DPI Billing Name</label>
    <length>150</length>
    <type>Text</type>
</CustomField>