UCF-APR2.4/ftr main/force-app/main/default/objects/Account/fields/DPI_Customer_Refused_to_Provide_SSN__c.field-meta.xml
<CustomField>
    <fullName>DPI_Customer_Refused_to_Provide_SSN__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Customer Refused to Provide SSN</label>
    <type>Checkbox</type>
</CustomField>