UCF-APR2.4/ftr main/force-app/main/default/objects/Account/fields/DPI_DisconnectDate__c.field-meta.xml
<CustomField>
    <fullName>DPI_DisconnectDate__c</fullName>
    <label>Disconnect Date</label>
    <type>Date</type>
</CustomField>