UCF-APR2.4/ftr main/force-app/main/default/objects/Account/fields/DPI_Disposition__c.field-meta.xml
<CustomField>
    <fullName>DPI_Disposition__c</fullName>
    <label>Disposition</label>
    <length>255</length>
    <type>Text</type>
</CustomField>