UCF-APR2.4/ftr main/force-app/main/default/objects/Account/fields/DPI_Federal_Tax_ID_No__c.field-meta.xml
<CustomField>
    <fullName>DPI_Federal_Tax_ID_No__c</fullName>
    <label>Federal Tax ID No.</label>
    <length>255</length>
    <type>Text</type>
</CustomField>