UCF-APR2.4/ftr main/force-app/main/default/objects/Account/fields/DPI_FicticiousNumber__c.field-meta.xml
<CustomField>
    <fullName>DPI_FicticiousNumber__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Fictitious Number?</label>
    <type>Checkbox</type>
</CustomField>