UCF-APR2.4/ftr main/force-app/main/default/objects/Account/fields/DPI_GanID__c.field-meta.xml
<CustomField>
    <fullName>DPI_GanID__c</fullName>
    <externalId>true</externalId>
    <label>Gan ID</label>
    <length>20</length>
    <type>Text</type>
</CustomField>