UCF-APR2.4/ftr main/force-app/main/default/objects/Account/fields/DPI_HotSpot_HSI_Info__c.field-meta.xml
<CustomField>
    <fullName>DPI_HotSpot_HSI_Info__c</fullName>
    <label>HotSpot HSI # Info</label>
    <length>255</length>
    <type>Text</type>
</CustomField>