UCF-APR2.4/ftr main/force-app/main/default/objects/Account/fields/DPI_HSIPassword__c.field-meta.xml
<CustomField>
    <fullName>DPI_HSIPassword__c</fullName>
    <label>HSI Password</label>
    <length>30</length>
    <type>Text</type>
</CustomField>