UCF-APR2.4/ftr main/force-app/main/default/objects/Account/fields/DPI_HSIUserName__c.field-meta.xml
<CustomField>
    <fullName>DPI_HSIUserName__c</fullName>
    <label>User Name</label>
    <length>50</length>
    <type>Text</type>
</CustomField>