UCF-APR2.4/ftr main/force-app/main/default/objects/Account/fields/DPI_ModemType__c.field-meta.xml
<CustomField>
    <fullName>DPI_ModemType__c</fullName>
    <label>Modem Type</label>
    <length>50</length>
    <type>Text</type>
</CustomField>