UCF-APR2.4/ftr main/force-app/main/default/objects/Account/fields/DPI_ModemVendor__c.field-meta.xml
<CustomField>
    <fullName>DPI_ModemVendor__c</fullName>
    <label>Modem Vendor</label>
    <length>50</length>
    <type>Text</type>
</CustomField>