UCF-APR2.4/ftr main/force-app/main/default/objects/Account/fields/DPI_PIN__c.field-meta.xml
<CustomField>
    <fullName>DPI_PIN__c</fullName>
    <label>PIN</label>
    <length>10</length>
    <type>Text</type>
</CustomField>