UCF-APR2.4/ftr main/force-app/main/default/objects/Account/fields/DPI_Red_Flag__c.field-meta.xml
<CustomField>
    <fullName>DPI_Red_Flag__c</fullName>
    <description>Red Flag Code</description>
    <label>Red Flag</label>
    <length>2</length>
    <type>Text</type>
</CustomField>