UCF-APR2.4/ftr main/force-app/main/default/objects/Account/fields/DPI_RentOwnBuy__c.field-meta.xml
<CustomField>
    <fullName>DPI_RentOwnBuy__c</fullName>
    <label>Rent/Own/Buy</label>
    <length>20</length>
    <type>Text</type>
</CustomField>