UCF-APR2.4/ftr main/force-app/main/default/objects/Account/fields/DPI_ServiceType__c.field-meta.xml
<CustomField>
    <fullName>DPI_ServiceType__c</fullName>
    <label>Service Type</label>
    <length>2</length>
    <type>Text</type>
</CustomField>