UCF-APR2.4/ftr main/force-app/main/default/objects/Account/fields/DPI_SSN__c.field-meta.xml
<CustomField>
    <fullName>DPI_SSN__c</fullName>
    <label>SSN</label>
    <length>12</length>
    <type>Text</type>
</CustomField>