UCF-APR2.4/ftr main/force-app/main/default/objects/Account/fields/DPI_TypeofBusiness__c.field-meta.xml
<CustomField>
    <fullName>DPI_TypeofBusiness__c</fullName>
    <label>Type of Business</label>
    <length>255</length>
    <type>Text</type>
</CustomField>