UCF-APR2.4/ftr main/force-app/main/default/objects/Account/fields/DPIAccountName__c.field-meta.xml
<CustomField>
    <fullName>DPIAccountName__c</fullName>
    <formula>IF(RecordType.Name = &quot;DPI&quot;,  Company_Name__c , Name )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>DPI Account Name</label>
    <type>Text</type>
</CustomField>