UCF-APR2.4/ftr main/force-app/main/default/objects/Account/fields/DPIUniversalServiceID__c.field-meta.xml
<CustomField>
    <fullName>DPIUniversalServiceID__c</fullName>
    <label>DPIUniversalServiceID</label>
    <length>50</length>
    <type>Text</type>
</CustomField>