UCF-APR2.4/ftr main/force-app/main/default/objects/Account/fields/DSAT_Ticket__c.field-meta.xml
<CustomField>
    <fullName>DSAT_Ticket__c</fullName>
    <formula>vlocity_cmt__PremisesId__r.DSAT_Ticket__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>DSAT Ticket #</label>
    <type>Text</type>
</CustomField>