UCF-APR2.4/ftr main/force-app/main/default/objects/Account/fields/DSF_Type__c.field-meta.xml
<CustomField>
    <fullName>DSF_Type__c</fullName>
    <label>DSF Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Business</fullName>
            </value>
            <value>
                <fullName>Consumer</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>