UCF-APR2.4/ftr main/force-app/main/default/objects/Account/fields/Duplicate__c.field-meta.xml
<CustomField>
    <fullName>Duplicate__c</fullName>
    <formula>1</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Duplicate #</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>