UCF-APR2.4/ftr main/force-app/main/default/objects/Account/fields/DW_Account_Join_Key__c.field-meta.xml
<CustomField>
    <fullName>DW_Account_Join_Key__c</fullName>
    <description>Unique account identifier in the Frontier data warehouse system.</description>
    <inlineHelpText>Unique account identifier in the Frontier data warehouse system.</inlineHelpText>
    <label>Customer Account Join Key</label>
    <length>40</length>
    <type>Text</type>
</CustomField>