UCF-APR2.4/ftr main/force-app/main/default/objects/Account/fields/Dwelling_Type__c.field-meta.xml
<CustomField>
    <fullName>Dwelling_Type__c</fullName>
    <label>Residence Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Garden Style</fullName>
            </value>
            <value>
                <fullName>High Rise</fullName>
            </value>
            <value>
                <fullName>Mid Rise</fullName>
            </value>
            <value>
                <fullName>Low Rise</fullName>
            </value>
            <value>
                <fullName>SFU</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>