UCF-APR2.4/ftr main/force-app/main/default/objects/Account/fields/Effective_Date_of_Agreement__c.field-meta.xml
<CustomField>
    <fullName>Effective_Date_of_Agreement__c</fullName>
    <label>Effective Date of Agreement</label>
    <type>Date</type>
</CustomField>