UCF-APR2.4/ftr main/force-app/main/default/objects/Account/fields/EIA__c.field-meta.xml
<CustomField>
    <fullName>EIA__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Updated by Randy Gromlich 3/4/2020</description>
    <inlineHelpText>Service address has some type of active EIA product</inlineHelpText>
    <label>EIA Customer</label>
    <type>Checkbox</type>
</CustomField>