UCF-APR2.4/ftr main/force-app/main/default/objects/Account/fields/emailId1__c.field-meta.xml
<CustomField>
    <fullName>emailId1__c</fullName>
    <label>EmailId</label>
    <type>Email</type>
</CustomField>