UCF-APR2.4/ftr main/force-app/main/default/objects/Account/fields/Employees_at_this_Site__c.field-meta.xml
<CustomField>
    <fullName>Employees_at_this_Site__c</fullName>
    <description>Used by Randy Gromlich for D&amp;B/MLR Data updated on 3/5/2020</description>
    <inlineHelpText>Number of Employees at the Site (DUNS)</inlineHelpText>
    <label>Employees at this Site</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>