UCF-APR2.4/ftr main/force-app/main/default/objects/Account/fields/Employees_at_this_Sites_Below__c.field-meta.xml
<CustomField>
    <fullName>Employees_at_this_Sites_Below__c</fullName>
    <description>Added by Randy Gromlich for D&amp;B data 2-25-2020</description>
    <inlineHelpText>Total Employees at the Site (DUNS) and all sites in the tree below it</inlineHelpText>
    <label>Employees at this Site &amp; Below</label>
    <precision>9</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>