UCF-APR2.4/ftr main/force-app/main/default/objects/Account/fields/Engagement_Vendor__c.field-meta.xml
<CustomField>
    <fullName>Engagement_Vendor__c</fullName>
    <label>Engagement Vendor</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Ascension Marketing MDU</fullName>
            </value>
            <value>
                <fullName>Community Outreach Partners 701167</fullName>
            </value>
            <value>
                <fullName>COP MDU</fullName>
            </value>
            <value>
                <fullName>Credico</fullName>
            </value>
            <value>
                <fullName>Credico Gotham MDU</fullName>
            </value>
            <value>
                <fullName>Cydcor</fullName>
            </value>
            <value>
                <fullName>Drasco</fullName>
            </value>
            <value>
                <fullName>Fiberconnect</fullName>
            </value>
            <value>
                <fullName>GroundBreaking</fullName>
            </value>
            <value>
                <fullName>ID2D</fullName>
            </value>
            <value>
                <fullName>ISG</fullName>
            </value>
            <value>
                <fullName>Marketing Werks</fullName>
            </value>
            <value>
                <fullName>Raimak</fullName>
            </value>
            <value>
                <fullName>Perfect Vision – Rexaza</fullName>
                <label>Rexza</label>
            </value>
            <value>
                <fullName>S&amp;P</fullName>
            </value>
            <value>
                <fullName>United</fullName>
            </value>
            <value>
                <fullName>USTCi</fullName>
                <isActive>false</isActive>
                <label>USTCi</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>