UCF-APR2.4/ftr main/force-app/main/default/objects/Account/fields/Ereach_Path__c.field-meta.xml
<CustomField>
    <fullName>Ereach_Path__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Ereach Path</label>
    <type>Checkbox</type>
</CustomField>