UCF-APR2.4/ftr main/force-app/main/default/objects/Account/fields/Est_Contracted_Units__c.field-meta.xml
<CustomField>
    <fullName>Est_Contracted_Units__c</fullName>
    <label>Est. Contracted Units</label>
    <length>10</length>
    <type>Text</type>
</CustomField>