UCF-APR2.4/ftr main/force-app/main/default/objects/Account/fields/Est_of_Employee_WiFi_Devices__c.field-meta.xml
<CustomField>
    <fullName>Est_of_Employee_WiFi_Devices__c</fullName>
    <description>Added by Randy Gromlich for D&amp;B data 2-25-2020</description>
    <inlineHelpText>Effective number of employee devices simultaneously connected to the WiFi network</inlineHelpText>
    <label>Est # of Employee WiFi Devices</label>
    <length>9</length>
    <type>Text</type>
</CustomField>