UCF-APR2.4/ftr main/force-app/main/default/objects/Account/fields/Est_of_Remote_Employees__c.field-meta.xml
<CustomField>
    <fullName>Est_of_Remote_Employees__c</fullName>
    <description>Added by Randy Gromlich for D&amp;B data 2-25-2020</description>
    <inlineHelpText>Effective number of &quot;remote&quot; employees at the location.</inlineHelpText>
    <label>Est # of Remote Employees</label>
    <length>9</length>
    <type>Text</type>
</CustomField>