UCF-APR2.4/ftr main/force-app/main/default/objects/Account/fields/Ethernet_Customer__c.field-meta.xml
<CustomField>
    <fullName>Ethernet_Customer__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Updated/Created by Randy Gromlich for D&amp;B/MLR data 3/5/2020</description>
    <inlineHelpText>Service address has some type of active Ethernet product</inlineHelpText>
    <label>Ethernet Customer</label>
    <type>Checkbox</type>
</CustomField>