UCF-APR2.4/ftr main/force-app/main/default/objects/Account/fields/EVPL_Customer__c.field-meta.xml
<CustomField>
    <fullName>EVPL_Customer__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Added by Randy Gromlich for D&amp;B data 3/5/2020</description>
    <inlineHelpText>Service address has some type of active EVPL product</inlineHelpText>
    <label>EVPL Customer</label>
    <type>Checkbox</type>
</CustomField>