UCF-APR2.4/ftr main/force-app/main/default/objects/Account/fields/Existing_CPE_Vendor__c.field-meta.xml
<CustomField>
    <fullName>Existing_CPE_Vendor__c</fullName>
    <description>This field is to contain the name of existing CPE vendors the company is doing or has done business with.</description>
    <inlineHelpText>This fileld should contain the names of exisitng CPE vendors the subject does business with.</inlineHelpText>
    <label>Existing CPE Vendor</label>
    <length>18</length>
    <type>Text</type>
</CustomField>