UCF-APR2.4/ftr main/force-app/main/default/objects/Account/fields/Experian_Business_Identification_Number__c.field-meta.xml
<CustomField>
    <fullName>Experian_Business_Identification_Number__c</fullName>
    <label>Experian Business Identification Number</label>
    <length>10</length>
    <type>Text</type>
</CustomField>